# topic-selector

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/topic_selector/: __init__.py  dash_utils.py  main.py
src/topic_selector/components/: selection.py  task_table.py
src/topic_selector/dummy/: dummy_data.py
src/topic_selector/selection/: probability.py  topic_selection.py
tests/: test_probability.py  test_selection.py
